--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,36 @@
-.gradle
-**/build/
-!src/**/build/
+# ビルドファイルと出力
+build/
+out/
+*.class
 
-# Ignore Gradle GUI config
-gradle-app.setting
-
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+# Gradle 関連
+.gradle/
+gradle/
 !gradle-wrapper.jar
 
-# Avoid ignore Gradle wrappper properties
-!gradle-wrapper.properties
+# OS 生成ファイル
+.DS_Store
+Thumbs.db
 
-# Cache of project
-.gradletasknamecache
+# IDE 関連
+.idea/
+*.iml
+*.iws
 
-# Eclipse Gradle plugin generated files
-# Eclipse Core
-.project
-# JDT-specific (Eclipse Java Development Tools)
-.classpath
+# 一般的なバックアップファイル
+*.bak
+*.swp
+*.swo
+
+# 一時ファイル
+*.tmp
+*.temp
+
+# ライセンスと README 以外の Markdown ファイル
+*.md
+!README.md
+!LICENSE
+
+# その他無視したいファイルやディレクトリ
+# 例: シークレットキーなど
+# secret.properties
