--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClass = 'funase.lint.App'
+    mainClass = 'funaselint.App'
 }
 
 tasks.named('test') {
