chore: ビルド時のアプリ名を funase-lint に変更

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 application {
     // Define the main class for the application.
     mainClass = 'funaselint.App'
+    applicationName = 'funase-lint'
 }
 
 tasks.named('test') {
