--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,8 @@
 				"vscjava.vscode-java-pack",
 				"vscjava.vscode-gradle",
 				"GitHub.copilot",
-				"mhutchie.git-graph"
+				"mhutchie.git-graph",
+				"redhat.vscode-xml"
 			]
 		}
 	}
